crates/scheduler/tests/trybuild/fail/unknown_param_argument.stderr
error: unsupported param_field argument
 --> tests/trybuild/fail/unknown_param_argument.rs:6:19
  |
6 |     #[param_field(unknown = "value")]
  |                   ^^^^^^^
